<resources>
    <string name="app_name">PracaInzynierska</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leavingHour">"Godzina wyjazdu: "</string>
    <string name="seatsNumber">"Liczba miejsc: "</string>
    <string name="price">"Cena: "</string>
    <string name="destination">"Miasto docelowe: "</string>
    <string name="leavingCity">"Miasto wyjazdu: "</string>
    <string name="leavingDate">"Data wyjazdu: "</string>
    <string name="cancel">Anuluj</string>
    <string name="add">Dodaj</string>
    <string name="apply">Zastosuj</string>
    <string name="e_mail">"E-mail: "</string>
    <string name="password">"Hasło: "</string>
    <string name="signIn">Zaloguj się</string>
    <string name="findTrip">Wyszukaj Ogłoszenie</string>
    <string name="signUp">Zarejestruj się</string>
    <string name="login">Login</string>
    <string name="driver">"Kierowca: "</string>
    <string name="save">Zapisz</string>
    <string name="surname">"Login: "</string>
    <string name="name">"Imię: "</string>
    <string name="confirmPassword">Powtórz hasło</string>

    <string name="nav_drawer_open">Drawer open</string>
    <string name="nav_drawer_close">Drower close</string>

    <string-array name="car_types">
        <item>Sedan</item>
        <item>Kombi</item>
        <item>Coupe</item>
        <item>Van</item>
        <item>Autokar</item>
    </string-array>

    <string name="collection_users">Users</string>

</resources>