<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".adverts.FiltersFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/departureTimeTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/leavingHour"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/departureTimeET"
                app:layout_constraintEnd_toStartOf="@+id/departureTimeET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/departureTimeET" />

            <EditText
                android:id="@+id/departureTimeET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_banner_margin"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Deprecated,SpeakableTextPresentCheck"
                android:textColorHint="@color/hintColor"
                android:background="@drawable/edit_text_bg"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/departureCityTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leavingCity"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/departureET"
                app:layout_constraintEnd_toStartOf="@+id/departureET"
                app:layout_constraintStart_toStartOf="@+id/departureTimeTV"
                app:layout_constraintTop_toTopOf="@+id/departureET"
                />

            <EditText
                android:id="@+id/departureET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="@+id/dateDepartureET"
                app:layout_constraintStart_toStartOf="@+id/dateDepartureET"
                app:layout_constraintTop_toBottomOf="@+id/dateDepartureET"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/departureDateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leavingDate"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/dateDepartureET"
                app:layout_constraintEnd_toStartOf="@+id/dateDepartureET"
                app:layout_constraintStart_toStartOf="@+id/departureCityTV"
                app:layout_constraintTop_toTopOf="@+id/dateDepartureET" />

            <EditText
                android:id="@+id/dateDepartureET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:enabled="true"
                android:focusable="false"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="@+id/departureTimeET"
                app:layout_constraintStart_toEndOf="@+id/departureTimeTV"
                app:layout_constraintTop_toBottomOf="@+id/departureTimeET"
                tools:ignore="Deprecated,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/arrivalCityTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/destination"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/arrivalET"
                app:layout_constraintEnd_toStartOf="@+id/arrivalET"
                app:layout_constraintStart_toStartOf="@+id/departureDateTV"
                app:layout_constraintTop_toTopOf="@+id/arrivalET" />

            <EditText
                android:id="@+id/arrivalET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="@+id/departureET"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/departureCityTV"
                app:layout_constraintTop_toBottomOf="@+id/departureET"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/adapterPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/priceET"
                app:layout_constraintEnd_toStartOf="@+id/priceET"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/arrivalCityTV"
                app:layout_constraintTop_toTopOf="@+id/priceET"
                app:layout_constraintVertical_bias="0.5"
/>

            <EditText
                android:id="@+id/priceET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_to_edittext_margin"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/arrivalET"
                app:layout_constraintStart_toStartOf="@+id/arrivalET"
                app:layout_constraintTop_toBottomOf="@+id/arrivalET"
                tools:ignore="SpeakableTextPresentCheck"
                android:textColorHint="@color/hintColor"
                android:background="@drawable/edit_text_bg"
                android:textColor="@color/textColor"/>

            <Button
                android:id="@+id/filterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_to_button_margin"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/apply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceET" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>