<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.EditAccountDataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/driverSwitch"
            app:layout_constraintStart_toStartOf="@+id/driverSwitch">


            <TextView
                android:id="@+id/loginTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/login"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/loginET"
                app:layout_constraintEnd_toStartOf="@+id/loginET"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/loginET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:textColor="@color/textColor"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/loginTV"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/name"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/nameET"
                app:layout_constraintEnd_toStartOf="@+id/nameET"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/loginTV"/>

            <EditText
                android:id="@+id/nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:textColor="@color/textColor"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameTV"
                app:layout_constraintTop_toBottomOf="@+id/loginET"
                tools:ignore="SpeakableTextPresentCheck"
                tools:text="@tools:sample/lorem" />


            <TextView
                android:id="@+id/emailTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/e_mail"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/emailET"
                app:layout_constraintEnd_toStartOf="@+id/emailET"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/loginTV"/>


            <EditText
                android:id="@+id/emailET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:textColor="@color/textColor"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/emailTV"
                app:layout_constraintTop_toBottomOf="@+id/nameET"
                tools:ignore="SpeakableTextPresentCheck"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/phoneTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:text="Numer telefonu: "
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/phoneET"
                app:layout_constraintEnd_toStartOf="@+id/phoneET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTV" />


            <EditText
                android:id="@+id/phoneET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:textColor="@color/textColor"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/phoneTV"
                app:layout_constraintTop_toBottomOf="@+id/emailET"
                tools:ignore="SpeakableTextPresentCheck"
                tools:text="@tools:sample/lorem" />





            <Button
                android:id="@+id/cancelBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_to_button_margin"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="@+id/saveBTN"
                app:layout_constraintEnd_toStartOf="@+id/saveBTN"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/saveBTN" />

            <Button
                android:id="@+id/saveBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_to_button_margin"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancelBTN"
                app:layout_constraintTop_toBottomOf="@+id/phoneTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>